Another huge Change

--- a/PhoenixVPN/Base.lproj/LaunchScreen.storyboard
+++ b/PhoenixVPN/Base.lproj/LaunchScreen.storyboard
@@ -16,38 +16,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2391514" translatesAutoresizingMaskIntoConstraints="NO" id="iy2-yc-3MD">
-                                <rect key="frame" x="0.0" y="64" width="414" height="337"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back" translatesAutoresizingMaskIntoConstraints="NO" id="JDn-dM-mrr">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_voxen" translatesAutoresizingMaskIntoConstraints="NO" id="wb5-2x-Uek">
+                                <rect key="frame" x="55" y="204" width="304" height="195"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="337" id="BS4-O5-I4J"/>
-                                    <constraint firstAttribute="width" constant="414" id="MWv-Mq-sVG"/>
+                                    <constraint firstAttribute="height" constant="195" id="nMV-QW-S9b"/>
+                                    <constraint firstAttribute="width" constant="304" id="pts-C9-kdh"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhoenixVPN" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqY-ZA-lR7">
-                                <rect key="frame" x="121" y="144" width="233" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VOXEN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K07-L1-g7e">
+                                <rect key="frame" x="100" y="419" width="214" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="214" id="lvv-sa-y0S"/>
+                                    <constraint firstAttribute="height" constant="90" id="tbn-Mk-KSr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="KohinoorGujarati-Bold" family="Kohinoor Gujarati" pointSize="60"/>
+                                <color key="textColor" red="0.0" green="0.61917728189999999" blue="0.86879318949999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="key" translatesAutoresizingMaskIntoConstraints="NO" id="dfF-hX-Txr">
-                                <rect key="frame" x="60" y="144" width="53" height="48"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_voxen" translatesAutoresizingMaskIntoConstraints="NO" id="JSh-gM-RVI">
+                                <rect key="frame" x="-140" y="720" width="406" height="302"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="azn-e4-SYi"/>
-                                    <constraint firstAttribute="width" constant="53" id="ngQ-gS-Wuy"/>
+                                    <constraint firstAttribute="width" constant="406" id="1qi-0w-h2d"/>
+                                    <constraint firstAttribute="height" constant="302" id="Ff1-oJ-hOk"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.05881185085" green="0.058830253780000001" blue="0.058810673649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JqY-ZA-lR7" secondAttribute="trailing" constant="60" id="NL6-Yy-Wsx"/>
-                            <constraint firstItem="iy2-yc-3MD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TMa-AG-idm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iy2-yc-3MD" secondAttribute="trailing" id="W31-vB-eHv"/>
-                            <constraint firstItem="dfF-hX-Txr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="brG-yb-oFc"/>
-                            <constraint firstItem="JqY-ZA-lR7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="csJ-rT-XgW"/>
-                            <constraint firstItem="JqY-ZA-lR7" firstAttribute="leading" secondItem="dfF-hX-Txr" secondAttribute="trailing" constant="8" id="e9J-QM-TVy"/>
-                            <constraint firstItem="iy2-yc-3MD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="erH-S4-Vys"/>
-                            <constraint firstItem="dfF-hX-Txr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="kJz-Tb-z7D"/>
+                            <constraint firstAttribute="bottom" secondItem="JSh-gM-RVI" secondAttribute="bottom" constant="-126" id="2P2-Gh-T0I"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="K07-L1-g7e" secondAttribute="trailing" constant="100" id="6sm-hB-Uyx"/>
+                            <constraint firstItem="wb5-2x-Uek" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="CNR-d0-Iqb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JSh-gM-RVI" secondAttribute="trailing" constant="148" id="EUc-JV-VzE"/>
+                            <constraint firstItem="wb5-2x-Uek" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="160" id="HId-em-NnK"/>
+                            <constraint firstItem="JDn-dM-mrr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Mg1-pW-9lr"/>
+                            <constraint firstItem="K07-L1-g7e" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="Xv4-Jv-zm7"/>
+                            <constraint firstItem="K07-L1-g7e" firstAttribute="top" secondItem="wb5-2x-Uek" secondAttribute="bottom" constant="20" id="afP-vJ-q6y"/>
+                            <constraint firstItem="JSh-gM-RVI" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-140" id="dnY-r3-NpC"/>
+                            <constraint firstItem="JDn-dM-mrr" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="jfV-SF-Soa"/>
+                            <constraint firstItem="JDn-dM-mrr" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ou7-qg-9Qg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wb5-2x-Uek" secondAttribute="trailing" constant="55" id="q64-FB-uin"/>
+                            <constraint firstAttribute="bottom" secondItem="JDn-dM-mrr" secondAttribute="bottom" id="xdg-pM-ExC"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -57,7 +69,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="2391514" width="1920" height="1200"/>
-        <image name="key" width="323" height="132"/>
+        <image name="back" width="1125" height="2436"/>
+        <image name="logo_voxen" width="236" height="195"/>
     </resources>
 </document>
