--- a/PhoenixVPN/ServerCell.xib
+++ b/PhoenixVPN/ServerCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SingleServerCell" rowHeight="55" id="KGk-i7-Jjw" customClass="ServerCell" customModule="PhoenixVPN" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SingleServerCell" rowHeight="55" id="KGk-i7-Jjw" customClass="ServerCell" customModule="VOXEN" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -24,10 +24,24 @@
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSl-1W-00R">
+                        <rect key="frame" x="210" y="10" width="100" height="35"/>
+                        <color key="backgroundColor" red="0.0" green="0.61917728189999999" blue="0.86879318949999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="35" id="6WH-aA-evU"/>
+                            <constraint firstAttribute="width" constant="100" id="PF5-JT-51m"/>
+                        </constraints>
+                        <state key="normal" title="Connect">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                    </button>
                 </subviews>
-                <color key="backgroundColor" red="0.05881185085" green="0.058830253780000001" blue="0.058810673649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" red="0.099370904270000004" green="0.14017239209999999" blue="0.31468152999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="VSl-1W-00R" secondAttribute="bottom" constant="10" id="6fd-ca-klr"/>
+                    <constraint firstItem="VSl-1W-00R" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="GQo-Qq-gKM"/>
                     <constraint firstAttribute="bottom" secondItem="3Gs-cD-dBU" secondAttribute="bottom" constant="10" id="J4c-Ed-OTs"/>
+                    <constraint firstAttribute="trailing" secondItem="VSl-1W-00R" secondAttribute="trailing" constant="10" id="NIU-7N-GVK"/>
                     <constraint firstItem="3Gs-cD-dBU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Pkk-iE-Qvg"/>
                     <constraint firstItem="3Gs-cD-dBU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="fQ2-Ae-1Vs"/>
                     <constraint firstAttribute="trailing" secondItem="3Gs-cD-dBU" secondAttribute="trailing" constant="70" id="ga3-fi-08H"/>
@@ -36,6 +50,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" systemColor="systemIndigoColor"/>
             <connections>
+                <outlet property="connectionButton" destination="VSl-1W-00R" id="ui8-uw-OtZ"/>
                 <outlet property="serverName" destination="3Gs-cD-dBU" id="dxW-h4-wpX"/>
             </connections>
             <point key="canvasLocation" x="-17.39130434782609" y="37.165178571428569"/>
